tests/constructor/return_value.rev
struct Foo {
    fn init() {
        return "result" // error: can't return a value from the constructor
    }
}